añadido implementacion comando pricesSpecificationCommand
